--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <header><nav><b>GoldenDDoS</b><ul><li><a href="#main">Главная</a><a href="https://dsc.gg/goldenddos">Discord Сервер</a></li></ul></nav></header>
+    <header><nav><b>GoldenDDoS  </b><a href="#main">Главная </a><a href="https://dsc.gg/goldenddos">Discord Сервер</a></nav></header>
     <main></main>
     <footer><center><b>© 2022 Wawastera Corporation</b></center></footer>
   </body>
