--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <header><nav><b>GoldenDDoS  </b><a href="#main">Главная </a><a href="https://dsc.gg/goldenddos">Discord Сервер</a></nav></header>
-    <main></main>
+    <main><h1>GoldenDDoS</h1><h2>Доступен <b>бесплатный</b> сервис по боттингу Minecraft серверов!</h2><button onclick="window.open('https://dsc.gg/goldenddos');">Начать боттить</button></main>
     <footer><center><b>© 2022 Wawastera Corporation</b></center></footer>
   </body>
 </html>
