--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <head></head>
+  <head><title>GoldenDDoS [dsc.gg/goldenddos]: Главная страница</title><meta charset="UTF-8"></meta><meta name="description" content="Главная страница GoldenDDoS [dsc.gg/goldenddos]"></meta></head>
   <body>
     <header><nav><a href="#main">Главная </a><a href="https://dsc.gg/goldenddos">Discord Сервер</a></nav></header>
     <main><h1>GoldenDDoS</h1><h2>Доступен <b>бесплатный</b> сервис по боттингу Minecraft серверов!</h2><button onclick="window.open('https://dsc.gg/goldenddos');">Начать боттить</button></main>
