--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><title>GoldenDDoS [dsc.gg/goldenddos]: Главная страница</title><meta charset="UTF-8"></meta><meta name="description" content="Главная страница GoldenDDoS [dsc.gg/goldenddos]"></meta><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><style>body { background: #c7b39b url(background.gif); color: #fff; }</style></head>
   <body>
-    <header><nav><a href="#main">Главная </a><a href="https://dsc.gg/goldenddos">Discord Сервер</a></nav></header>
+    <header><nav><a href="https://dsc.gg/goldenddos">Discord Сервер</a></nav></header>
     <main><h1 style="color: red;">GoldenDDoS</h1><h2 style="color: white;">Доступен <b style="color: green;">бесплатный</b> сервис по боттингу Minecraft серверов!</h2><button onclick="window.open('https://dsc.gg/goldenddos');">Присоединиться к нам</button></main>
     <footer><center><b>© 2022 Wawastera Corporation</b></center></footer>
   </body>
